Fix hello alignment

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -524,7 +524,7 @@ body {
 				line-height: normal;
 			}
 			width: 68px;
-			bottom: -5px;
+			bottom: -8px;
 			right: 0;
 			color: white;
 			text-decoration: none;
